# GAMES-Summary

./: .gitignore  README.md
Assignment0/: CMakeSettings.json
Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment2/: CMakeSettings.json  main.cpp  rasterizer.cpp
Assignment3/: CMakeSettings.json  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: main.cpp
Assignment6/: BVH.cpp  global.hpp  main.cpp
Assignment7/: BVH.cpp  Scene.cpp  main.cpp
GAMES101/Assignment0/: main.cpp
GAMES101/Assignment1/: CMakeSettings.json
GAMES101/Assignment3/: CMakeLists.txt
GAMES101/Assignment5/: Renderer.cpp  Triangle.hpp
GAMES101/Assignment6/: Bounds3.hpp  Renderer.cpp  Triangle.hpp
GAMES101/Assignment7/: Triangle.hpp
GAMES101/Assignment7/images/: binary.ppm
GAMES202/hw0/: index.html
GAMES202/hw0/src/loads/: loadOBJ.js
GAMES202/hw0/src/materials/: PhongMaterial.js
GAMES202/hw0/src/shaders/: InternalShader.js
